# AI-Customer-Support-Analytics

./: .env  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  local.db  project_tree.txt
.github/workflows/: ci.yml
.venv310/: pyvenv.cfg
.venv310/Scripts/: activate  activate.bat
ai_customer_support_analytics_backend.egg-info/: SOURCES.txt  requires.txt
airflow/dags/: monitor_and_retrain_dag.py  train_model_dag.py
alembic/versions/: 20260611_0001_create_ticket_tables.py  6bae8c259bce_add_users_table.py
app/api/: deps.py
app/core/: logging.py  security.py
app/db/: session.py
app/ml/: model_loader.py  (+2 more)
backend/: Dockerfile  README.md  project_tree.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 36727938e0bc_initial_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  model.py  tickets.py
backend/app/core/: config.py  logging.py
backend/app/database/: base.py  connection.py
backend/app/db/: base.py
backend/app/ml/: classifier.py  model_loader.py
backend/app/models/: customer.py  prediction.py  ticket.py  user.py
backend/app/repositories/: ticket_repository.py
backend/app/schemas/: ticket.py
backend/app/services/: prediction_service.py  ticket_service.py
backend/tests/: conftest.py  test_tickets.py
docs/: phase-1-architecture.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
scripts/: backup_db.sh  restore_db.sh
tests/: conftest.py  test_health.py
(+35 files in other folders)
