[project]
name = "ai-customer-support-analytics-backend"
version = "0.1.0"
description = "FastAPI backend for AI-powered customer support analytics."
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.34",
    "uvicorn[standard]>=0.30.6",
    "mlflow==2.11.3",
    "scikit-learn>=1.3.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
